--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -87,9 +87,9 @@
         <h:outputStylesheet library="css" name="/alumno/transcript/transcript-drag.css"/>
         <h:outputStylesheet library="css" name="letra.css"/>
         <script src="https://www.youtube.com/iframe_api"></script>
-        <div class="uk-section margen-superior"  style="box-sizing: border-box">
+        <div class="uk-section margen-superior" style="box-sizing: border-box">
             <div class="uk-container padding-contenedor">
-                <h:panelGroup layout="block" styleClass="" pt:uk-filter="target: .js-filter">
+                <h:panelGroup layout="block" id="filtro-seleccion" pt:uk-filter="target: .js-filter">
                     <ul class="uk-subnav uk-subnav-pill uk-flex uk-flex-center "  >
                         <li uk-filter-control=".transcrip" uk-tooltip="Video" class="uk-active uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/morado.svg" width="70" height="70"  alt="" styleClass="uk-border-circle uk-animation-shake"/></li>
                         <li uk-filter-control=".match" uk-tooltip="Match" class="uk-animation-toggle" tabindex="0" style="display: #{empty relacionarOracionControlador.tareaRelacionarOracionModeloLista ? 'none' : 'block'}">
@@ -298,6 +298,15 @@
                     tabla.style.display = 'none';
                 }
             }
+
+            document.querySelector('.uk-container ul li:last-child').addEventListener('click', function (evento) {
+                UIkit.modal.confirm('Al selecionar esta tarea, no podrá selecciona script').then(function() {
+                    console.log('Confirmed.')
+                }, function () {
+                    console.log('Rejected.')
+                })
+            });
+
         </script>
         <script type="application/javascript">
             var transcripcion = document.querySelector('.answer');
