--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -4,7 +4,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 <ui:composition template="/template/escolar/template-alumno.xhtml">
     <ui:define name="hamburguesa">
         <div class="color-nav uk-visible@m">
@@ -121,70 +123,22 @@
                 <h1 class="lescuadron letra-titulo uk-text-center uk-margin-large-top">#{alumno['dashboard.homework.done']}</h1>
 
 
-                <div uk-filter="target: .js-filter">
-                    <ul class="uk-subnav uk-subnav-pill uk-flex uk-flex-center">
-                        <ui:repeat value="#{alumnoControlador.tareaActvidadModeloLista}" var="actividades">
-                            <li uk-filter-control=".#{actividades.idActividad}" class="uk-active"><a href="#">Actividad</a></li>
-                        </ui:repeat>
-                    </ul>
-                    <ul class="js-filter">
-                        <ui:repeat value="#{alumnoControlador.tareaActvidadModeloLista}" var="actividades">
-                            <li class="#{actividades.idActividad}" style="display: block">
-                                <h:panelGroup  styleClass="fondo-comic5 uk-child-width-1-3@m uk-grid" pt:uk-grid="">
-                                    <div>
-                                        <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0"  >
-                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/who.svg" alt="moustrou naranja" pt:uk-tooltip="title: #{alumno['grammar']}; pos: right"/>
-                                            <div class="uk-width-1-1@m paddind-barra " ><progress class="uk-progress color1" value="60" max="100"/></div>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0" >
-                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/whom.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['listening']}; pos: right "  />
-                                            <div class="uk-width-1-1@m paddind-barra "><progress class="uk-progress color2" value="60" max="100"/></div>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0">
-                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake " library="img" name="mounstro/whose.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['reading']}; pos: right "  />
-                                            <div class="uk-width-1-1@m paddind-barra "><progress class="uk-progress color3" value="60" max="100"/></div>
-                                        </div>
-                                    </div>
-                                </h:panelGroup>
-                                <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-2@m uk-grid" pt:uk-grid="">
-                                    <div class="fondo-comic" style="border: 6px solid white; padding: 20px 0;">
-                                        <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0">
-                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake"  library="img" name="mounstro/3ojos.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['writing']}; pos: right "/>
-                                            <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color4" value="60" max="100"/></div>
-                                        </div>
-                                    </div>
-                                    <div class="fondo-comic4 " style="border: 6px solid white; padding: 20px 0;">
-                                        <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0" >
-                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/verde.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['mental.map']}; pos: right "/>
-                                            <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color5" value="60" max="100"/></div>
-                                        </div>
-                                    </div>
-                                </h:panelGroup>
-                            </li>
-                        </ui:repeat>
-
-                    </ul>
-
-                </div>
-                <div>
+                <div >
                     <ul class="uk-subnav uk-subnav-pill" uk-switcher="">
-                        <ui:repeat value="#{alumnoControlador.tareaActvidadModeloLista}" var="actividades">
-                            <li ><a href="#">#{actividades.idActividad}</a></li>
+                        <ui:repeat value="#{alumnoControlador.tareaActvidadModeloLista}" var="actividades" varStatus="contador">
+                            <li ><a href="#">Actividad #{contador.index + 1}</a></li>
                         </ui:repeat>
                     </ul>
 
                     <ul class="uk-switcher uk-margin">
-                        <ui:repeat value="#{alumnoControlador.tareaActvidadModeloLista}" var="actividades">
+                        <ui:repeat value="#{tareasProgresoControlador.tareaActividadModeloLista}" var="actividades" varStatus="contador">
+                            #{tareasProgresoControlador.llenaTareas(actividades.id)}
                             <li>
                                 <h:panelGroup  styleClass="fondo-comic5 uk-child-width-1-3@m uk-grid" pt:uk-grid="">
                                     <div>
                                         <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0"  >
                                             <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/who.svg" alt="moustrou naranja" pt:uk-tooltip="title: #{alumno['grammar']}; pos: right"/>
-                                            <div class="uk-width-1-1@m paddind-barra " ><progress class="uk-progress color1" value="60" max="100"/></div>
+                                            <div class="uk-width-1-1@m paddind-barra " ><progress class="uk-progress color1" value="12" max="100"/></div>
                                         </div>
                                     </div>
                                     <div>
@@ -217,8 +171,8 @@
                             </li>
                         </ui:repeat>
                     </ul>
-                </div>
 
+                </div>
             </div>
         </div>
     </ui:define>
