--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -83,14 +83,11 @@
         <div class="uk-section margen-superior">
             <div class="uk-container padding-contenedor">
                 <div uk-filter="target: .js-filter" >
-
                     <ul class="uk-subnav uk-subnav-pill uk-flex uk-flex-center">
                         <li uk-filter-control=".ordenar" uk-tooltip="Order Words" class="uk-animation-toggle uk-active" tabindex="0"><h:graphicImage library="img" name="mounstro/3ojos.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
-                        <li uk-filter-control=".relacion-imagen" uk-tooltip="palabras" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
-                        <li uk-filter-control=".talking" uk-tooltip="palabras" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
-
+                        <li uk-filter-control=".relacion-imagen" uk-tooltip="Relacionar Imagen" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
+                        <li uk-filter-control=".talking" uk-tooltip="Hablar" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
                     </ul>
-
                     <ul class="js-filter" style="list-style: none">
                         <li class="ordenar">
                             <h:form id="tareaOraciones">
@@ -108,49 +105,47 @@
                         </li>
                         <li class="relacion-imagen" >
                             <h1 class="lescuadron uk-text-center letra-titulo">Matching words</h1>
-                            <div class="uk-grid uk-child-width-1-2@m" uk-grid="">
-                                <div class="contenedor-imagen scroll-drag">
-                                    <table class="tabla-imagenes">
-                                        <thead>
-                                        <tr>
-                                            <th class="" style="width: 50%">Imgen</th>
-                                            <th style="width: 50%">Respuesta</th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
-                                        <tr>
-                                            <td>
-                                                <h:graphicImage library="img" name="/alumno/glosario/dare.jpg"/>
-                                            </td>
-                                            <td class="uk-sortable" uk-sortable="group: respuesta-imagen"/>
-                                        </tr>
-                                        <tr>
-                                            <td><h:graphicImage library="img" name="/alumno/glosario/dare.jpg"/></td>
-                                            <td class="uk-sortable" uk-sortable="group: respuesta-imagen"/>
-                                        </tr>
-                                        <tr>
-                                            <td><h:graphicImage library="img" name="/alumno/glosario/dare.jpg"/></td>
-                                            <td class="uk-sortable" uk-sortable="group: respuesta-imagen"/>
-                                        </tr>
-                                        <tr>
-                                            <td><h:graphicImage library="img" name="/alumno/glosario/dare.jpg"/></td>
-                                            <td class="uk-sortable" uk-sortable="group: respuesta-imagen"/>
-                                        </tr>
-                                        <tr>
-                                            <td><h:graphicImage library="img" name="/alumno/glosario/dare.jpg"/></td>
-                                            <td class="uk-sortable" uk-sortable="group: respuesta-imagen"/>
-                                        </tr>
-                                        </tbody>
-                                    </table>
+                            <h:form>
+                                <div class="uk-grid uk-child-width-1-2@m" uk-grid="">
+                                    <div class="contenedor-imagen scroll-drag">
+                                        <table class="tabla-imagenes">
+                                            <thead>
+                                            <tr>
+                                                <th class="" style="width: 50%">Imgen</th>
+                                                <th style="width: 50%">Respuesta</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                                <ui:repeat value="#{relacionarControlador.relacionarModeloLista}" var="relacionar">
+                                                    <tr>
+                                                        <td><h:graphicImage library="img" name="/alumno/glosario/dare.jpg"/></td>
+                                                        <td class="uk-sortable" uk-sortable="group: respuesta-imagen">
+                                                            <h:panelGroup layout="blovk" rendered="#{not empty relacionar.respuesta}" styleClass="palabra-imagen">#{relacionarControlador.buscaPalabra(relacionar.respuesta)}</h:panelGroup>
+                                                        </td>
+                                                        <h:inputHidden value="#{relacionar.respuesta}" rendered="#{empty relacionarControlador.relacionarModeloLista[0].respuesta}"/>
+                                                    </tr>
+                                                </ui:repeat>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <h:panelGroup styleClass="respuesta-imagen contenedor-imagen palabras "
+                                                  rendered="#{not empty relacionarControlador.relacionarModeloLista[0].respuesta}"
+                                                  layout="block">
+                                        Respondido
+                                    </h:panelGroup>
+                                    <h:panelGroup layout="block"
+                                                  styleClass="respuesta-imagen contenedor-imagen palabras "
+                                                  pt:uk-sortable="group: respuesta-imagen"
+                                                  rendered="#{empty relacionarControlador.relacionarModeloLista[0].respuesta}">
+                                        <ui:repeat value="#{relacionarControlador.relacionarModeloLista}" var="relacionar">
+                                            <div data-codigo="#{relacionar.codigo}" class="palabra-imagen">#{relacionar.palabra}</div>
+                                        </ui:repeat>
+                                    </h:panelGroup>
                                 </div>
-                                <div class="respuesta-imagen contenedor-imagen palabras " uk-sortable="group: respuesta-imagen">
-                                    <div class="palabra-imagen">palabra1</div>
-                                    <div class="palabra-imagen" >palabra2</div>
-                                    <div class="palabra-imagen" >palabra3</div>
-                                    <div class="palabra-imagen" >palabra4</div>
-                                    <div class="palabra-imagen" >palabra5</div>
-                                </div>
-                            </div>
+                                <h:commandButton value="Send" onclick="enviarRespuesta()" rendered="#{empty relacionarControlador.relacionarModeloLista[0].respuesta}">
+                                    <f:ajax listener="#{relacionarControlador.enviaRespuesta}" execute="@form" onevent="function funcion(data) {respuestaEnvidad(data)}"/>
+                                </h:commandButton>
+                            </h:form>
                         </li>
                         <li class="talking" >
                             <h1 class="lescuadron uk-text-center letra-titulo">Habla con tu pareja</h1>
@@ -190,6 +185,7 @@
                 document.getElementById('tareaOraciones:tareaOracionesInput').value = respuestas.join('|');
             }
         </script>
+        <h:outputScript library="js" name="alumno/more-actibity.js"/>
     </ui:define>
 </ui:composition>
 </html>
