--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -115,7 +115,7 @@
                      <div class="uk-width-2-3@m">
                          <div class="uk-section uk-border-rounded border-section uk-padding-remove color-card-dashboard-alumno" style="position:relative;padding-top:52.25%;">
                              <div style="position:relative;padding-top:52.25%;" class="uk-margin-auto">
-                                 <iframe src="https://youtu.be/0_1NU60qHWs"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen="" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+<!--                                 <iframe src="https://youtu.be/0_1NU60qHWs"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen="" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>-->
                                  <iframe src="https://www.youtube.com/embed/0_1NU60qHWs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
                              </div>
                          </div>
@@ -131,7 +131,8 @@
                     </h:form>
                     <ul>
                         <li class="">
-                            <h:graphicImage styleClass="vacio" rendered="#{empty alumnoControlador.tareaActvidadModeloLista}" library="img" name="vacio.svg" pt:uk-svg=""/>
+                            <!--<h:graphicImage styleClass="vacio" library="img" name="/alumno/pop-art/mensaje5.svg" pt:uk-svg=""/>-->
+                            <h:panelGroup layout="block" styleClass="vacio" rendered="#{empty alumnoControlador.tareaActvidadModeloLista}">empty</h:panelGroup>
                             <h:panelGroup id="tareas" styleClass="fondo-comic5 uk-child-width-1-3@m uk-grid" pt:uk-grid="" rendered="#{not empty alumnoControlador.tareaActvidadModeloLista}">
                                 <div class="imagen-flexible">
                                     <h:graphicImage styleClass="img-alumno-dashboard uk-display-block uk-animation-shake" library="img" name="mounstro/who.svg" alt="moustrou naranja" pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[0].tarea}; pos: right"/>
