--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -13,7 +13,7 @@
 	<meta name="google-site-verification" content="DLGw7JmFbDOC2lHAxcYSXxNJuYlID8QR6KrnicJ0oKI" />
 	<link  rel="shortcut icon"  href="#{resource['img/favicon.ico']}"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-	<h:outputStylesheet library="css" name="estilos-landing.css"/>
+	<link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/estilos-landing.css"/>
 </h:head>
 <h:body>
 	<aside>
